--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -33,3 +33,37 @@ threadpoolctl==3.5.0
 tqdm==4.67.1
 typing_extensions==4.12.2
 urllib3==2.2.3
+## The following requirements were added by pip freeze:
+antlr4-python3-runtime==4.9.3
+attrs==24.3.0
+cloudpickle==3.1.0
+demucs==4.0.1
+dora_search==0.1.12
+einops==0.8.0
+enum34==1.1.10
+filelock==3.16.1
+fsspec==2024.12.0
+huggingface-hub==0.30.2
+Jinja2==3.1.5
+julius==0.2.7
+lameenc==1.7.0
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.4.2
+omegaconf==2.3.0
+openunmix==1.3.0
+PyGuitarPro==0.6
+PyMuPDF==1.25.1
+PyYAML==6.0.2
+regex==2024.11.6
+retrying==1.3.4
+safetensors==0.5.3
+setuptools==75.6.0
+sounddevice==0.5.1
+submitit==1.5.2
+sympy==1.13.1
+tokenizers==0.21.1
+torch==2.5.1
+torchaudio==2.5.1
+transformers==4.51.2
+treetable==0.2.5
